unpackaged/main/default/objects/Activity/fields/Additional_Help__c.field-meta.xml
<CustomField>
    <fullName>Additional_Help__c</fullName>
    <inlineHelpText>What else could Bunnings do to help the customer run and grow their business?</inlineHelpText>
    <label>Additional Help</label>
    <length>255</length>
    <type>Text</type>
</CustomField>