unpackaged/main/default/objects/Activity/fields/Apprenticeship_Call_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Apprenticeship_Call_Outcome__c</fullName>
    <description>Manually updated field to extend Apprentice Account End Date</description>
    <label>Apprenticeship Call Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Extend Apprenticeship</fullName>
            </value>
            <value>
                <fullName>Apprenticeship has Ended</fullName>
            </value>
            <value>
                <fullName>Convert to Full PowerPass Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>