unpackaged/main/default/objects/Activity/fields/Are_you_using_any_technology__c.field-meta.xml
<CustomField>
    <fullName>Are_you_using_any_technology__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are you using any technology?</label>
    <type>Checkbox</type>
</CustomField>