unpackaged/main/default/objects/Activity/fields/Assigned_1__c.field-meta.xml
<CustomField>
    <fullName>Assigned_1__c</fullName>
    <description>Used in activity reporting</description>
    <formula>Owner:User.FirstName + &quot; &quot; +  Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned(1)</label>
    <type>Text</type>
</CustomField>