unpackaged/main/default/objects/Activity/fields/Assigned_Profile__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Profile__c</fullName>
    <formula>IF(ISBLANK(Owner:User.ProfileId),Owner:Queue.QueueName , Owner:User.Profile.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Profile</label>
    <type>Text</type>
</CustomField>