unpackaged/main/default/objects/Activity/fields/Building_Solutions_Studio__c.field-meta.xml
<CustomField>
    <fullName>Building_Solutions_Studio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Building Solutions Studio</label>
    <type>Checkbox</type>
</CustomField>