unpackaged/main/default/objects/Activity/fields/Business_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Business_Outcome__c</fullName>
    <description>Field available for Call Cycle, Apprentice, and Contract Customer Review</description>
    <label>Business Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Extend Apprenticeship</fullName>
            </value>
            <value>
                <fullName>Apprenticeship Ending</fullName>
            </value>
            <value>
                <fullName>Convert to full powerpass account</fullName>
            </value>
            <value>
                <fullName>Increase Spend</fullName>
            </value>
            <value>
                <fullName>Maintain Spend</fullName>
            </value>
            <value>
                <fullName>Decrease Spend</fullName>
            </value>
            <value>
                <fullName>Will not return to Bunnings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>