unpackaged/main/default/objects/Activity/fields/Business_Trend__c.field-meta.xml
<CustomField>
    <fullName>Business_Trend__c</fullName>
    <inlineHelpText>How is business going, have there been any changes?</inlineHelpText>
    <label>Business Trend</label>
    <length>255</length>
    <type>Text</type>
</CustomField>