unpackaged/main/default/objects/Activity/fields/Call_Cycle_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Call_Cycle_Attempt__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Used by Call Cycle tasks to determine the attempt count, when rescheduling, the attempt goes up by 1.</description>
    <label>Call Cycle Attempt</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>