unpackaged/main/default/objects/Activity/fields/Call_Research_Notes__c.field-meta.xml
<CustomField>
    <fullName>Call_Research_Notes__c</fullName>
    <label>Call Research Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>