unpackaged/main/default/objects/Activity/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>For users to leave notes against the call. Field used on events only.</description>
    <inlineHelpText>For users to leave notes against the call</inlineHelpText>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>