unpackaged/main/default/objects/Activity/fields/Continue_to_Decline__c.field-meta.xml
<CustomField>
    <fullName>Continue_to_Decline__c</fullName>
    <label>Continue to Decline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>