unpackaged/main/default/objects/Activity/fields/Credit_options__c.field-meta.xml
<CustomField>
    <fullName>Credit_options__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit options</label>
    <type>Checkbox</type>
</CustomField>