unpackaged/main/default/objects/Activity/fields/Deliveries__c.field-meta.xml
<CustomField>
    <fullName>Deliveries__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deliveries</label>
    <type>Checkbox</type>
</CustomField>