unpackaged/main/default/objects/Activity/fields/Event_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Completed_Date__c</fullName>
    <description>Field Timestamped when the event status is set to completed for the first time.</description>
    <label>Event Completed Date</label>
    <type>DateTime</type>
</CustomField>