unpackaged/main/default/objects/Activity/fields/Frame_and_Truss__c.field-meta.xml
<CustomField>
    <fullName>Frame_and_Truss__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Frame and Truss</label>
    <type>Checkbox</type>
</CustomField>