unpackaged/main/default/objects/Activity/fields/Growing_Maintaining_Reason_Other__c.field-meta.xml
<CustomField>
    <fullName>Growing_Maintaining_Reason_Other__c</fullName>
    <label>Growing Reason Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>