unpackaged/main/default/objects/Activity/fields/Growth_Reason__c.field-meta.xml
<CustomField>
    <fullName>Growth_Reason__c</fullName>
    <label>Growing Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Winning more work</fullName>
            </value>
            <value>
                <fullName>Won big project - once off</fullName>
            </value>
            <value>
                <fullName>Personal project</fullName>
            </value>
            <value>
                <fullName>Expanding business</fullName>
            </value>
            <value>
                <fullName>Growing their team so completing more work</fullName>
            </value>
            <value>
                <fullName>Bunnings has stock available</fullName>
            </value>
            <value>
                <fullName>Happy with Bunnings experience</fullName>
            </value>
            <value>
                <fullName>Work in the area</fullName>
            </value>
            <value>
                <fullName>Unable to understand reason due to language barrier</fullName>
            </value>
            <value>
                <fullName>Unable to identify reason</fullName>
            </value>
            <value>
                <fullName>Work is steady</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>