unpackaged/main/default/objects/Activity/fields/Have_you_heard_about_Buildxact__c.field-meta.xml
<CustomField>
    <fullName>Have_you_heard_about_Buildxact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have you heard about Buildxact?</label>
    <type>Checkbox</type>
</CustomField>