unpackaged/main/default/objects/Activity/fields/Hire_shop__c.field-meta.xml
<CustomField>
    <fullName>Hire_shop__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hire shop</label>
    <type>Checkbox</type>
</CustomField>