unpackaged/main/default/objects/Activity/fields/Know_about_TS__c.field-meta.xml
<CustomField>
    <fullName>Know_about_TS__c</fullName>
    <inlineHelpText>Did this customer know they had a Trade Specialist?</inlineHelpText>
    <label>Know about TS?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>