unpackaged/main/default/objects/Activity/fields/Likely_to_Return__c.field-meta.xml
<CustomField>
    <fullName>Likely_to_Return__c</fullName>
    <description>Used in Churned Customer Calls</description>
    <label>Likely to Return</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>