unpackaged/main/default/objects/Activity/fields/Main_Reason_Other__c.field-meta.xml
<CustomField>
    <fullName>Main_Reason_Other__c</fullName>
    <label>Main Reason (Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>