unpackaged/main/default/objects/Activity/fields/Maintain_Growth_Spend__c.field-meta.xml
<CustomField>
    <fullName>Maintain_Growth_Spend__c</fullName>
    <label>Maintain Growth Spend</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>