unpackaged/main/default/objects/Activity/fields/Objectives__c.field-meta.xml
<CustomField>
    <fullName>Objectives__c</fullName>
    <description>Call objectives for Call Cycle Task / Event</description>
    <label>Objectives</label>
    <type>TextArea</type>
</CustomField>