unpackaged/main/default/objects/Activity/fields/Ordering_products__c.field-meta.xml
<CustomField>
    <fullName>Ordering_products__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ordering products</label>
    <type>Checkbox</type>
</CustomField>