unpackaged/main/default/objects/Activity/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No answer</fullName>
            </value>
            <value>
                <fullName>Left voicemail</fullName>
            </value>
            <value>
                <fullName>Wrong number</fullName>
            </value>
            <value>
                <fullName>Busy</fullName>
            </value>
            <value>
                <fullName>Requested Call Back</fullName>
            </value>
            <value>
                <fullName>Customer Onboarded</fullName>
            </value>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>On Leave</fullName>
            </value>
            <value>
                <fullName>Connected</fullName>
            </value>
            <value>
                <fullName>Unable to Contact Email Sent</fullName>
            </value>
            <value>
                <fullName>Do not call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>