unpackaged/main/default/objects/Activity/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Phone Number of the related Account for Log a Call</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>