unpackaged/main/default/objects/Activity/fields/Planned_Call__c.field-meta.xml
<CustomField>
    <fullName>Planned_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Events created via Call Planner</description>
    <label>Planned Call</label>
    <type>Checkbox</type>
</CustomField>