unpackaged/main/default/objects/Activity/fields/PowerPass_App__c.field-meta.xml
<CustomField>
    <fullName>PowerPass_App__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PowerPass App</label>
    <type>Checkbox</type>
</CustomField>