unpackaged/main/default/objects/Activity/fields/Previous_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Previous_Record_Type__c</fullName>
    <label>Previous Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>