unpackaged/main/default/objects/Activity/fields/Quoting__c.field-meta.xml
<CustomField>
    <fullName>Quoting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quoting</label>
    <type>Checkbox</type>
</CustomField>