unpackaged/main/default/objects/Activity/fields/Reason_Group__c.field-meta.xml
<CustomField>
    <fullName>Reason_Group__c</fullName>
    <description>Use to group LifeCycle Call Reason</description>
    <formula>IF(OR(CONTAINS(Subject, &quot;Reducing&quot;), CONTAINS(Subject, &quot;Lapsing&quot;)), &quot;Reducing&quot;,
IF(CONTAINS(Subject, &quot;Growing&quot;), &quot;Growing&quot;, IF(CONTAINS(Subject, &quot;Maintaining&quot;), &quot;Maintaining&quot;, &quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reason Group</label>
    <type>Text</type>
</CustomField>