unpackaged/main/default/objects/Activity/fields/Referral_comments__c.field-meta.xml
<CustomField>
    <fullName>Referral_comments__c</fullName>
    <label>Referral comments</label>
    <type>TextArea</type>
</CustomField>