unpackaged/main/default/objects/Activity/fields/Secondary_Reason__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Reason__c</fullName>
    <label>Secondary Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business has closed due to covid</fullName>
            </value>
            <value>
                <fullName>Covid has slowed the business, anticipating return soon</fullName>
            </value>
            <value>
                <fullName>Delivery Service</fullName>
            </value>
            <value>
                <fullName>Disconnected phone</fullName>
            </value>
            <value>
                <fullName>Don’t feel valued by Bunnings</fullName>
            </value>
            <value>
                <fullName>Finished project</fullName>
            </value>
            <value>
                <fullName>Have better relationships elsewhere</fullName>
            </value>
            <value>
                <fullName>Inadequate quality</fullName>
            </value>
            <value>
                <fullName>Insufficient stock</fullName>
            </value>
            <value>
                <fullName>Lost my card</fullName>
            </value>
            <value>
                <fullName>Not good enough service/expertise</fullName>
            </value>
            <value>
                <fullName>Not operating this business anymore</fullName>
            </value>
            <value>
                <fullName>Not the best price</fullName>
            </value>
            <value>
                <fullName>Not the right product selection</fullName>
            </value>
            <value>
                <fullName>Shopping with a different account</fullName>
            </value>
            <value>
                <fullName>Still shopping, but I don’t scan my card</fullName>
            </value>
            <value>
                <fullName>Too slow to get what they need</fullName>
            </value>
            <value>
                <fullName>Unable to contact</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Need fewer supplies</fullName>
            </value>
            <value>
                <fullName>Issue with Bunnings</fullName>
            </value>
            <value>
                <fullName>Card and account issues</fullName>
            </value>
            <value>
                <fullName>Unable to understand reason due to language barrier</fullName>
            </value>
            <value>
                <fullName>Not willing to discuss reason for decline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>