unpackaged/main/default/objects/Activity/fields/Secondary_Reason_Expanded__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Reason_Expanded__c</fullName>
    <label>Secondary Reason Expanded</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Work slowing because of external impacts (e.g COVID, fires, floods, economic downturn)</fullName>
            </value>
            <value>
                <fullName>Taking personal leave from work</fullName>
            </value>
            <value>
                <fullName>Not operating this business anymore</fullName>
            </value>
            <value>
                <fullName>Finished project / job</fullName>
            </value>
            <value>
                <fullName>Hardware needs are reducing so shopping less</fullName>
            </value>
            <value>
                <fullName>Sub-contracting and not using personal PowerPass account as much</fullName>
            </value>
            <value>
                <fullName>Retired or slowing down for retirement</fullName>
            </value>
            <value>
                <fullName>Relocated / moved away</fullName>
            </value>
            <value>
                <fullName>Bunnings has insufficient stock</fullName>
            </value>
            <value>
                <fullName>Location of store</fullName>
            </value>
            <value>
                <fullName>Bunnings is not competitive on price (Price)</fullName>
            </value>
            <value>
                <fullName>Not the right product selection (Range)</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Special orders (CSO)</fullName>
            </value>
            <value>
                <fullName>Store experience</fullName>
            </value>
            <value>
                <fullName>Online experience</fullName>
            </value>
            <value>
                <fullName>Forgetting to scan card</fullName>
            </value>
            <value>
                <fullName>Needs a new / additional card</fullName>
            </value>
            <value>
                <fullName>Shopping with a different account</fullName>
            </value>
            <value>
                <fullName>Issue with credit</fullName>
            </value>
            <value>
                <fullName>Issue with PowerPass app</fullName>
            </value>
            <value>
                <fullName>Other - please specify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>