unpackaged/main/default/objects/Activity/fields/Secondary_Reason_Expanded_Other__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Reason_Expanded_Other__c</fullName>
    <label>Secondary Reason Expanded Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>