unpackaged/main/default/objects/Activity/fields/Special_orders_CSO__c.field-meta.xml
<CustomField>
    <fullName>Special_orders_CSO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special orders (CSO)</label>
    <type>Checkbox</type>
</CustomField>