unpackaged/main/default/objects/Activity/fields/Sub_type__c.field-meta.xml
<CustomField>
    <fullName>Sub_type__c</fullName>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Task_Sub_Type</valueSetName>
    </valueSet>
</CustomField>