unpackaged/main/default/objects/Activity/fields/Supply_and_Install_services__c.field-meta.xml
<CustomField>
    <fullName>Supply_and_Install_services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supply and Install services</label>
    <type>Checkbox</type>
</CustomField>