unpackaged/main/default/objects/Activity/fields/Supply_Needs__c.field-meta.xml
<CustomField>
    <fullName>Supply_Needs__c</fullName>
    <inlineHelpText>What supplies do they need at the moment? How can we help?</inlineHelpText>
    <label>Supply Needs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>