unpackaged/main/default/objects/Activity/fields/Task_Event_Status__c.field-meta.xml
<CustomField>
    <fullName>Task_Event_Status__c</fullName>
    <formula>IF( 
     OR(
          ISPICKVAL( Status , &quot;Completed&quot;),
           ISPICKVAL( Status__c , &quot;Completed&quot;) 
      ), 
      &quot;Completed&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Event Status</label>
    <type>Text</type>
</CustomField>