unpackaged/main/default/objects/Activity/fields/Technology_Name_Other__c.field-meta.xml
<CustomField>
    <fullName>Technology_Name_Other__c</fullName>
    <label>Technology Name - Other</label>
    <type>TextArea</type>
</CustomField>