unpackaged/main/default/objects/Activity/fields/Technology_Use_Other__c.field-meta.xml
<CustomField>
    <fullName>Technology_Use_Other__c</fullName>
    <label>Technology Use - Other</label>
    <type>TextArea</type>
</CustomField>