unpackaged/main/default/objects/Activity/fields/Trade_Website__c.field-meta.xml
<CustomField>
    <fullName>Trade_Website__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trade Website</label>
    <type>Checkbox</type>
</CustomField>