unpackaged/main/default/objects/Activity/fields/What_are_you_using_it_for__c.field-meta.xml
<CustomField>
    <fullName>What_are_you_using_it_for__c</fullName>
    <label>What are you using it for?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Take Offs</fullName>
            </value>
            <value>
                <fullName>Estimating</fullName>
            </value>
            <value>
                <fullName>Quoting (Customer quote production)</fullName>
            </value>
            <value>
                <fullName>Purchase order</fullName>
            </value>
            <value>
                <fullName>Scheduling</fullName>
            </value>
            <value>
                <fullName>Cost Tracking</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>