unpackaged/main/default/objects/Activity/fields/Which_technology_are_you_using__c.field-meta.xml
<CustomField>
    <fullName>Which_technology_are_you_using__c</fullName>
    <label>Which technology are you using?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Databuild</fullName>
            </value>
            <value>
                <fullName>BuilderTrend</fullName>
            </value>
            <value>
                <fullName>Procure</fullName>
            </value>
            <value>
                <fullName>CoConstruct</fullName>
            </value>
            <value>
                <fullName>BuildSoft</fullName>
            </value>
            <value>
                <fullName>Microsoft Excel</fullName>
            </value>
            <value>
                <fullName>Other Builders Software</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>