unpackaged/main/default/objects/Activity/fields/Whole_of_build_support__c.field-meta.xml
<CustomField>
    <fullName>Whole_of_build_support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Whole of build support</label>
    <type>Checkbox</type>
</CustomField>