unpackaged/main/default/objects/Activity/fields/Would_you_like_a_demo__c.field-meta.xml
<CustomField>
    <fullName>Would_you_like_a_demo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Would you like a demo?</label>
    <type>Checkbox</type>
</CustomField>