unpackaged/main/default/objects/Activity/fields/Would_you_like_to_know_more__c.field-meta.xml
<CustomField>
    <fullName>Would_you_like_to_know_more__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Would you like to know more?</label>
    <type>Checkbox</type>
</CustomField>